RESOLVED FIXED 202521
http/tests/security/navigate-when-restoring-cached-page.html should not use RTCPeerConnection to not enter in page cache
https://bugs.webkit.org/show_bug.cgi?id=202521
Summary http/tests/security/navigate-when-restoring-cached-page.html should not use R...
youenn fablet
Reported 2019-10-03 06:09:11 PDT
http/tests/security/navigate-when-restoring-cached-page.html should not use RTCPeerConnection to not enter in page cache
Attachments
Patch (6.78 KB, patch)
2019-10-03 06:15 PDT, youenn fablet
no flags
Patch for landing (6.78 KB, patch)
2019-10-03 09:24 PDT, youenn fablet
no flags
youenn fablet
Comment 1 2019-10-03 06:15:26 PDT
Chris Dumez
Comment 2 2019-10-03 08:28:41 PDT
Comment on attachment 380106 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=380106&action=review r=me with comments. > Source/WebCore/testing/Internals.cpp:931 > +class CannotSuspendActiveDOMObject final : public ActiveDOMObject, public RefCounted<CannotSuspendActiveDOMObject> { CannotSuspendActiveDOMObject -> UnsuspendableActiveDOMObject > Source/WebCore/testing/Internals.h:906 > + RefPtr<CannotSuspendActiveDOMObject> m_cannotSuspendActiveDOMObject; m_unsuspendableActiveDOMObject.
youenn fablet
Comment 3 2019-10-03 09:24:51 PDT
Created attachment 380123 [details] Patch for landing
WebKit Commit Bot
Comment 4 2019-10-03 11:07:32 PDT
Comment on attachment 380123 [details] Patch for landing Clearing flags on attachment: 380123 Committed r250662: <https://trac.webkit.org/changeset/250662>
WebKit Commit Bot
Comment 5 2019-10-03 11:07:33 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 6 2019-10-03 11:08:16 PDT
Note You need to log in before you can comment on or make changes to this bug.