http/tests/security/navigate-when-restoring-cached-page.html should not use RTCPeerConnection to not enter in page cache https://bugs.webkit.org/show_bug.cgi?id=202521

Reviewed by Chris Dumez.

Source/WebCore:

Introduce a dummy ActiveDOMObject which can never be suspended for document suspension.
Allow a page to create this dummy ActiveDOMObject through internals.
Covered by updated test.

* dom/ActiveDOMObject.h:
* testing/Internals.cpp:
(WebCore::Internals::preventDocumentForEnteringPageCache):
* testing/Internals.h:
* testing/Internals.idl:

LayoutTests:

Make use of new internals API to prevent the page to go in page cache.

* http/tests/security/navigate-when-restoring-cached-page.html:


Canonical link: https://commits.webkit.org/216021@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@250662 268f45cc-cd09-0410-ab3c-d52691b4dbfc